# waveget

./: .gitignore  index.html  package.json
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: download.rs  file.rs  search.rs  utils.rs
src/components/: DownloadList.jsx  DownloadOptions.jsx  FolderSelector.jsx  ResultCard.jsx  SearchBar.jsx
src/hooks/: useDownloads.js
src/pages/: Home.jsx
src/services/: download.js  spotify.js  youtube.js
